# kewpie

./: .envrc.example  .gitignore  README.md  justfile  main.py  pyproject.toml
db/: dev.db
db/migrations/: alembic.ini
db/migrations/versions/: 702fbc6aeab6_create_user_table.py  95070838e48a_create_accesstoken_table.py
templates/: base.html  home.html  login.html
