[project]
name = "queue-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.13.2",
    "fastapi-users[sqlalchemy]>=13.0.0",
    "fastapi[standard]>=0.112.2",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.3",
]
