[project]
name = "queue-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi-users[sqlalchemy]>=13.0.0",
    "fastapi[standard]>=0.115.0",
    "opentelemetry-distro>=0.48b0",
    "opentelemetry-exporter-otlp>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "pydantic-settings>=2.5.2",
]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "ruff>=0.6.8",
]
